# raspilapse

./: .gitignore  .pre-commit-config.yaml  ADAPTIVE_TIMELAPSE_FLOW.md  BLACK_FORMATTING_GUIDE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  COVERAGE_IMPROVEMENTS.md  DAILY_VIDEO.md  GeminiAPlus.md  GeminiImprovements.md  ImprovementsTodo.md  Improvements_done.md  LICENSE  ML.md  Makefile  OVERLAY.md  OVERLAY_SUMMARY.txt  README.md  SERVICE.md  SIMPLE_OVERLAY.md  TodoKeogram.md  UPGRADE.md  USAGE.md  WEATHER.md  batch_videos.py  codecov.yml  install_daily_video.sh  make_todays_transition.sh  pyproject.toml  pytest.ini  raspilapse.service  requirements-dev.txt  requirements.txt  spjutvika.yml  test.sh  test_stop_start.py  test_weather_fetch.py  test_weather_overlay.py  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md
config/: README.md  config.example.yml  config.yml  config.yml.backup.20260121_121146  config.yml.backup.20260121_202714  config.yml.backup.20260121_202716  spjutvika.yml
docs/: ADAPTIVE_TIMELAPSE_FLOW.md  BLACK_FORMATTING_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  DAILY_VIDEO.md  INSTALL.md  LONG_TERM_STABILITY.md  MAINTAINER.md  MAINTENANCE.md  ML_EXPOSURE_SYSTEM.md  MONITORING_SETUP.md  NEXT_SESSION_CONTEXT.md  OVERLAY.md  README.md  SERVICE.md  SERVICES_OVERVIEW.md  SETUP_COMPLETE.md  SLITSCAN_UPGRADE.md  TIMELAPSE_VIDEO.md  TRANSITION_SMOOTHING.md  TRANSITION_TUNING_LOG.md  USAGE.md  V1_RELEASE_NOTES.md  WEATHER.md  YEAR_LONG_CHECKLIST.md  changelog_2025-12-25.md
graphs/: timelapse_analysis_24h.xlsx  timelapse_analysis_2h.xlsx
ml_state/: ml_state.json
scripts/: check_capture_rate.sh  check_disk_space.sh  check_service.sh  cleanup_old_images.sh  db_graphs.py  db_stats.py  install.sh  install_cleanup.sh  test.sh  uninstall.sh  uninstall_daily_video.sh
src/: __init__.py  __version__.py  analyze_timelapse.py  apply_overlay.py  auto_timelapse.py  bootstrap_ml.py  bootstrap_ml_v2.py  capture_image.py  colors.py  create_keogram.py  daily_timelapse.py  database.py  graph_ml_patterns.py  logging_config.py  make_timelapse.py  ml_exposure.py  ml_exposure_v2.py  overlay.py  retry_uploads.py  status.py  system_monitor.py  upload_service.py  weather.py
systemd/: raspilapse-cleanup.service  raspilapse-cleanup.timer  raspilapse-daily-video.service  raspilapse-daily-video.timer  raspilapse-upload-retry.service  raspilapse-upload-retry.timer
tests/: __init__.py  test_analyze_timelapse.py  test_apply_overlay.py  test_auto_timelapse.py  test_bootstrap_ml.py  test_bootstrap_ml_v2.py  test_brightness_zones.py  test_capture_image.py  test_colors.py  test_create_keogram.py  test_daily_timelapse.py  test_database.py  test_db_graphs.py  test_db_stats.py  test_graph_ml_patterns.py  test_logging_config.py  test_make_timelapse.py  test_make_timelapse_daily.py  test_ml_exposure.py  test_ml_exposure_v2.py  test_overcast_brightness.py  test_overlay.py  test_overlay_simplified.py  test_status.py  test_system_monitor.py  test_upload_service.py  test_version.py  test_weather.py
(+7 files in other folders)
